--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
                 </a>
             </div>
         </section>
-        <img  class="imagem" src="./assets/imagem.png" alt="Foto da Joana Santos programando">
+        <img  class="imagem" src="./assets/Imagem.png" alt="Foto da Joana Santos programando">
     </main>
     <footer class="rodape">
-        <p>Desenvolvido por Alura.</p>
+        <p>Desenvolvido por Christian Gauer</p>
     </footer>
 </body>
 
