--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 </a>
             </div>
         </section>
-        <img  class="imagem" src="./assets/Imagem.png" alt="Foto da Joana Santos programando">
+        <img  class="imagem" src="Imagem.png" alt="Foto da Joana Santos programando">
     </main>
     <footer class="rodape">
         <p>Desenvolvido por Christian Gauer</p>
